--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
   </head>
   <body>
     <main class="main--Principal">
+      <!----------------------------------------->
       <section class="presentacion">
         <span>SapheryDesings</span>
       </section>
-      <!---------------------------------->
+      <!----------------------------------------->
       <section><h3 class="tituloSeccion">Asignaturas DAW</h3></section>
+      <!----------------------------------------->
       <section class="daw">
-        <!----------------------------------------->
         <a href="./daw/sistemas/indiceSistemas.html">
-          <div class="card sombra">
+          <div class="card">
             <div class="tituloCard"><strong>Sistemas Informáticos</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -85,7 +86,13 @@
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
         </a>
-        <!-----------------------------------------
+        <!----------------------------------------->
+      </section>
+    </main>
+  </body>
+</html>
+
+<!-----------------------------------------
         <a href="">
           <div class="card">
             <div class="tituloCard"><strong>Bases de Datos II</strong></div>
@@ -98,7 +105,6 @@
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
         </a>
-        -----------------------------------------
         <a href="">
           <div class="card">
             <div class="tituloCard"><strong>Entornos de Desarrollo</strong></div>
@@ -111,7 +117,6 @@
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
         </a>
-        -----------------------------------------
         <a href="">
           <div class="card">
             <div class="tituloCard"><strong>FOL</strong></div>
@@ -124,7 +129,6 @@
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
         </a>
-        -----------------------------------------
         <a href="">
           <div class="card">
             <div class="tituloCard"><strong>Desarrollo Web I</strong></div>
@@ -137,7 +141,6 @@
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
         </a>
-        -----------------------------------------
         <a href="">
           <div class="card">
             <div class="tituloCard"><strong>Desarrollo Web II</strong></div>
@@ -150,7 +153,6 @@
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
         </a>
-        -----------------------------------------
         <a href="">
           <div class="card">
             <div class="tituloCard"><strong>Despliegue de App Web</strong></div>
@@ -163,7 +165,6 @@
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
         </a>
-        -----------------------------------------
         <a href="">
           <div class="card">
             <div class="tituloCard"><strong>Diseño de Interfaces</strong></div>
@@ -176,7 +177,6 @@
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
         </a>
-        -----------------------------------------
         <a href="">
           <div class="card">
             <div class="tituloCard"><strong>Empresa</strong></div>
@@ -189,16 +189,8 @@
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
         </a>
-      </section> -->
-      <!--------------------------------
+      </section>
       <section><h3 class="tituloSeccion">devAcademy</h3></section>
-      <section class="devAcademy">
-        
-      </section> -->
-      <!--------------------------------
+      <section class="devAcademy"></section>
       <section><h3 class="tituloSeccion">Proyectos</h3></section>
-      <section class="proyectos">
-      </section> -->
-    </main>
-  </body>
-</html>
+      <section class="proyectos"></section> -->
