--- a/daw/proUno/indiceProUno.html
+++ b/daw/proUno/indiceProUno.html
@@ -15,8 +15,8 @@
 <body>
     <header>
         <div class="navtop">
-          <span>Programación I</span>
-          <a href="../../index.html">Principal</a>
+            <a href="../proUno/indiceProUno.html">Programación I</a>
+            <a href="../../index.html">Principal</a>
         </div>
     </header>
     <main class="main--Indice">
