--- a/daw/proUno/proCinco.html
+++ b/daw/proUno/proCinco.html
@@ -15,8 +15,8 @@
 <body>
   <header>
     <div class="navtop">
-        <a href="../proDos/indiceProDos.html">Programación II</a>
-        <a href="../../index.html">Principal</a>
+      <a href="../proUno/indiceProUno.html">Programación I</a>
+      <a href="../../index.html">Principal</a>
     </div>
   </header> 
   <main class="main--Apuntes">
