--- a/daw/sistemas/indiceSistemas.html
+++ b/daw/sistemas/indiceSistemas.html
@@ -23,91 +23,91 @@
         <section class="temaIndice">
             <span>1.- Instalación software libre y propietario</span>
             <ul>
-              <li><a href="/daw/sistemas/sistemasUno.html#1.1">Estructura y componentes de un sistema informático. Periféricos y adaptadores para la conexion de dispositivos</a></li>
-              <li><a href="/daw/sistemas/sistemasUno.html#1.2">Tipos y topologías de red</a></li>
-              <li><a href="/daw/sistemas/sistemasUno.html#1.3">Mapa físico y lógico de una red</a></li>
-              <li><a href="/daw/sistemas/sistemasUno.html#1.4">Arquitectura de un sitema operativo</a></li>
-              <li><a href="/daw/sistemas/sistemasUno.html#1.5">Funciones del sistema operativo</a></li>
-              <li><a href="/daw/sistemas/sistemasUno.html#1.6">Tipos de sistemas operativos</a></li>
-              <li><a href="/daw/sistemas/sistemasUno.html#1.7">Tipos de aplicaciones</a></li>
-              <li><a href="/daw/sistemas/sistemasUno.html#1.8">Licencias y tipos de licencias</a></li>
-              <li><a href="/daw/sistemas/sistemasUno.html#1.9">Gestores de arranque</a></li>
-              <li><a href="/daw/sistemas/sistemasUno.html#1.10">Máquinas virtuales</a></li>
-              <li><a href="/daw/sistemas/sistemasUno.html#1.11">Consideraciones previas a la instalación de sistemas operativos libres y propietarios</a></li>
-              <li><a href="/daw/sistemas/sistemasUno.html#1.12">Instalación de sistemas operativos. Requisitos, versiones y licencias</a></li>
-              <li><a href="/daw/sistemas/sistemasUno.html#1.13">Instalación y desinstalación de aplicaciones. Requisitos, versiones y licencias</a></li>
-              <li><a href="/daw/sistemas/sistemasUno.html#1.14">Actualización de sistemas operativos y aplicaciones</a></li>
-              <li><a href="/daw/sistemas/sistemasUno.html#1.15">Archivos de inicio de sistemas operativos</a></li>
-              <li><a href="/daw/sistemas/sistemasUno.html#1.16">Registro del sistema</a></li>
-              <li><a href="/daw/sistemas/sistemasUno.html#1.17">Actualización y mantenimiento de controladores de dispositivos</a></li>
+              <li><a href="./sistemasUno.html#1.1">Estructura y componentes de un sistema informático. Periféricos y adaptadores para la conexion de dispositivos</a></li>
+              <li><a href="./sistemasUno.html#1.2">Tipos y topologías de red</a></li>
+              <li><a href="./sistemasUno.html#1.3">Mapa físico y lógico de una red</a></li>
+              <li><a href="./sistemasUno.html#1.4">Arquitectura de un sitema operativo</a></li>
+              <li><a href="./sistemasUno.html#1.5">Funciones del sistema operativo</a></li>
+              <li><a href="./sistemasUno.html#1.6">Tipos de sistemas operativos</a></li>
+              <li><a href="./sistemasUno.html#1.7">Tipos de aplicaciones</a></li>
+              <li><a href="./sistemasUno.html#1.8">Licencias y tipos de licencias</a></li>
+              <li><a href="./sistemasUno.html#1.9">Gestores de arranque</a></li>
+              <li><a href="./sistemasUno.html#1.10">Máquinas virtuales</a></li>
+              <li><a href="./sistemasUno.html#1.11">Consideraciones previas a la instalación de sistemas operativos libres y propietarios</a></li>
+              <li><a href="./sistemasUno.html#1.12">Instalación de sistemas operativos. Requisitos, versiones y licencias</a></li>
+              <li><a href="./sistemasUno.html#1.13">Instalación y desinstalación de aplicaciones. Requisitos, versiones y licencias</a></li>
+              <li><a href="./sistemasUno.html#1.14">Actualización de sistemas operativos y aplicaciones</a></li>
+              <li><a href="./sistemasUno.html#1.15">Archivos de inicio de sistemas operativos</a></li>
+              <li><a href="./sistemasUno.html#1.16">Registro del sistema</a></li>
+              <li><a href="./sistemasUno.html#1.17">Actualización y mantenimiento de controladores de dispositivos</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>2.- Administración de software base</span>
             <ul>
-              <li><a href="/daw/sistemas/sistemasDos.html#2.1">Administración de usuarios y grupos locales</a></li>
-              <li><a href="/daw/sistemas/sistemasDos.html#2.2">Seguridad de cuentas de usuario</a></li>
-              <li><a href="/daw/sistemas/sistemasDos.html#2.3">Seguridad de contraseñas</a></li>
-              <li><a href="/daw/sistemas/sistemasDos.html#2.4">Configuración del protocolo TCP/IP. Direcciones IP y máscaras de subred</a></li>
-              <li><a href="/daw/sistemas/sistemasDos.html#2.5">Servicio de Nombres de Dominios (DNS)</a></li>
-              <li><a href="/daw/sistemas/sistemasDos.html#2.6">Archivos de configuración de red</a></li>
-              <li><a href="/daw/sistemas/sistemasDos.html#2.7">Optimización de sistemas para ordenadores portátiles. Archivos de red sin conexión</a></li>
-              <li><a href="/daw/sistemas/sistemasDos.html#2.8">Principales comandos de sistemas operativos libres y propietarios</a></li>
+              <li><a href="./sistemasDos.html#2.1">Administración de usuarios y grupos locales</a></li>
+              <li><a href="./sistemasDos.html#2.2">Seguridad de cuentas de usuario</a></li>
+              <li><a href="./sistemasDos.html#2.3">Seguridad de contraseñas</a></li>
+              <li><a href="./sistemasDos.html#2.4">Configuración del protocolo TCP/IP. Direcciones IP y máscaras de subred</a></li>
+              <li><a href="./sistemasDos.html#2.5">Servicio de Nombres de Dominios (DNS)</a></li>
+              <li><a href="./sistemasDos.html#2.6">Archivos de configuración de red</a></li>
+              <li><a href="./sistemasDos.html#2.7">Optimización de sistemas para ordenadores portátiles. Archivos de red sin conexión</a></li>
+              <li><a href="./sistemasDos.html#2.8">Principales comandos de sistemas operativos libres y propietarios</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>3.- Administración de la información</span>
             <ul>
-              <li><a href="/daw/sistemas/sistemasTres.html#3.1">Sistemas de archivos</a></li>
-              <li><a href="/daw/sistemas/sistemasTres.html#3.2">Tipos de sistemas de archivos</a></li>
-              <li><a href="/daw/sistemas/sistemasTres.html#3.3">Gestión de sistemas de archivos mediante comandos y entornos gráficos</a></li>
-              <li><a href="/daw/sistemas/sistemasTres.html#3.4">Gestión de enlaces</a></li>
-              <li><a href="/daw/sistemas/sistemasTres.html#3.5">Estructura de directorios de sistemas operativos libres y propietarios</a></li>
-              <li><a href="/daw/sistemas/sistemasTres.html#3.6">Búsqueda de información del sistema mediante comandos y herramientas gráficas</a></li>
-              <li><a href="/daw/sistemas/sistemasTres.html#3.7">Identificación del software instalado mediante comandos y herramientas gráficas</a></li>
-              <li><a href="/daw/sistemas/sistemasTres.html#3.8">Gestión de la información del sistema. Rendimiento. Estadísticas</a></li>
-              <li><a href="/daw/sistemas/sistemasTres.html#3.9">Montaje y desmontaje de dispositivos en sistemas operativos</a></li>
-              <li><a href="/daw/sistemas/sistemasTres.html#3.10">Automatización</a></li>
-              <li><a href="/daw/sistemas/sistemasTres.html#3.11">Herramientas de administración de discos. Particiones y volúmenes. Desfragmentación y revisión</a></li>
+              <li><a href="./sistemasTres.html#3.1">Sistemas de archivos</a></li>
+              <li><a href="./sistemasTres.html#3.2">Tipos de sistemas de archivos</a></li>
+              <li><a href="./sistemasTres.html#3.3">Gestión de sistemas de archivos mediante comandos y entornos gráficos</a></li>
+              <li><a href="./sistemasTres.html#3.4">Gestión de enlaces</a></li>
+              <li><a href="./sistemasTres.html#3.5">Estructura de directorios de sistemas operativos libres y propietarios</a></li>
+              <li><a href="./sistemasTres.html#3.6">Búsqueda de información del sistema mediante comandos y herramientas gráficas</a></li>
+              <li><a href="./sistemasTres.html#3.7">Identificación del software instalado mediante comandos y herramientas gráficas</a></li>
+              <li><a href="./sistemasTres.html#3.8">Gestión de la información del sistema. Rendimiento. Estadísticas</a></li>
+              <li><a href="./sistemasTres.html#3.9">Montaje y desmontaje de dispositivos en sistemas operativos</a></li>
+              <li><a href="./sistemasTres.html#3.10">Automatización</a></li>
+              <li><a href="./sistemasTres.html#3.11">Herramientas de administración de discos. Particiones y volúmenes. Desfragmentación y revisión</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>4.- Administración de dominios</span>
             <ul>
-              <li><a href="/daw/sistemas/sistemasCuatro.html#4.1">Estructura cliente-servidor</a></li>
-              <li><a href="/daw/sistemas/sistemasCuatro.html#4.2">Protocolo LDAP</a></li>
-              <li><a href="/daw/sistemas/sistemasCuatro.html#4.3">Concepto de dominio. Subdominio. Requisitos necesarios para montar un dominio</a></li>
-              <li><a href="/daw/sistemas/sistemasCuatro.html#4.4">Conceptos clave de Active Directory</a></li>
-              <li><a href="/daw/sistemas/sistemasCuatro.html#4.5">Administración de cuentas. Cuentas predeterminadas</a></li>
-              <li><a href="/daw/sistemas/sistemasCuatro.html#4.6">Contraseñas. Bloqueos de cuenta. Cuentas de usuarios y equipos</a></li>
-              <li><a href="/daw/sistemas/sistemasCuatro.html#4.7">Perfiles móviles y obligatorios</a></li>
-              <li><a href="/daw/sistemas/sistemasCuatro.html#4.8">Carpetas personales</a></li>
-              <li><a href="/daw/sistemas/sistemasCuatro.html#4.9">Plantillas de usuario. Variables de entorno</a></li>
-              <li><a href="/daw/sistemas/sistemasCuatro.html#4.10">Administración de grupos. Tipo. Estrategias de anidamiento. Grupos predeterminados</a></li>
-              <li><a href="/daw/sistemas/sistemasCuatro.html#4.11">Instalación de Windows Server y Ubuntu Server</a></li>
+              <li><a href="./sistemasCuatro.html#4.1">Estructura cliente-servidor</a></li>
+              <li><a href="./sistemasCuatro.html#4.2">Protocolo LDAP</a></li>
+              <li><a href="./sistemasCuatro.html#4.3">Concepto de dominio. Subdominio. Requisitos necesarios para montar un dominio</a></li>
+              <li><a href="./sistemasCuatro.html#4.4">Conceptos clave de Active Directory</a></li>
+              <li><a href="./sistemasCuatro.html#4.5">Administración de cuentas. Cuentas predeterminadas</a></li>
+              <li><a href="./sistemasCuatro.html#4.6">Contraseñas. Bloqueos de cuenta. Cuentas de usuarios y equipos</a></li>
+              <li><a href="./sistemasCuatro.html#4.7">Perfiles móviles y obligatorios</a></li>
+              <li><a href="./sistemasCuatro.html#4.8">Carpetas personales</a></li>
+              <li><a href="./sistemasCuatro.html#4.9">Plantillas de usuario. Variables de entorno</a></li>
+              <li><a href="./sistemasCuatro.html#4.10">Administración de grupos. Tipo. Estrategias de anidamiento. Grupos predeterminados</a></li>
+              <li><a href="./sistemasCuatro.html#4.11">Instalación de Windows Server y Ubuntu Server</a></li>
             </ul>
         </section>
         <section class="temaIndice">
             <span>5.- Administración del acceso al dominio</span>
             <ul>
-              <li><a href="/daw/sistemas/sistemasCinco.html#5.1">Equipos de dominio</a></li>
-              <li><a href="/daw/sistemas/sistemasCinco.html#5.2">Permisos y derechos</a></li>
-              <li><a href="/daw/sistemas/sistemasCinco.html#5.3">Administración del acceso a recursos. Samba. NFS</a></li>
-              <li><a href="/daw/sistemas/sistemasCinco.html#5.4">Permisos de red. Permisos locales. Herencia. Permisos efectivos</a></li>
-              <li><a href="/daw/sistemas/sistemasCinco.html#5.5">Delegación de permisos</a></li>
-              <li><a href="/daw/sistemas/sistemasCinco.html#5.6">Listas de control de acceso(ACL Access Control List)</a></li>
-              <li><a href="/daw/sistemas/sistemasCinco.html#5.7">Directivas de grupo. Derechos de usuarios. Directivas de seguridad. Objetos de directiva. Ámbito de las directivas. Plantillas</a></li>
+              <li><a href="./sistemasCinco.html#5.1">Equipos de dominio</a></li>
+              <li><a href="./sistemasCinco.html#5.2">Permisos y derechos</a></li>
+              <li><a href="./sistemasCinco.html#5.3">Administración del acceso a recursos. Samba. NFS</a></li>
+              <li><a href="./sistemasCinco.html#5.4">Permisos de red. Permisos locales. Herencia. Permisos efectivos</a></li>
+              <li><a href="./sistemasCinco.html#5.5">Delegación de permisos</a></li>
+              <li><a href="./sistemasCinco.html#5.6">Listas de control de acceso(ACL Access Control List)</a></li>
+              <li><a href="./sistemasCinco.html#5.7">Directivas de grupo. Derechos de usuarios. Directivas de seguridad. Objetos de directiva. Ámbito de las directivas. Plantillas</a></li>
             </ul>
         </section>
         <section class="temaIndice">
           <span>6.- Resolución de incidencias y asistencia técnica</span>
           <ul>
-            <li><a href="/daw/sistemas/sistemasSeis.html#6.1">Interpretación, análisis y elaboración de documentación técnica. Interpretación, análisis y elaboración de manuales de instalación</a></li>
-            <li><a href="/daw/sistemas/sistemasSeis.html#6.2">Instalación y configuración de sistemas operativos y aplicaciones. Licencias de cliente y licencias de servidor</a></li>
-            <li><a href="/daw/sistemas/sistemasSeis.html#6.3">Instalaciones desatendidas e implementación de archivos de respuesta</a></li>
-            <li><a href="/daw/sistemas/sistemasSeis.html#6.4">Servidores de actualizaciones automáticas</a></li>
-            <li><a href="/daw/sistemas/sistemasSeis.html#6.5">Partes de incidencias y protocolos de actuación</a></li>
-            <li><a href="/daw/sistemas/sistemasSeis.html#6.6">Administración remota</a></li>
+            <li><a href="./sistemasSeis.html#6.1">Interpretación, análisis y elaboración de documentación técnica. Interpretación, análisis y elaboración de manuales de instalación</a></li>
+            <li><a href="./sistemasSeis.html#6.2">Instalación y configuración de sistemas operativos y aplicaciones. Licencias de cliente y licencias de servidor</a></li>
+            <li><a href="./sistemasSeis.html#6.3">Instalaciones desatendidas e implementación de archivos de respuesta</a></li>
+            <li><a href="./sistemasSeis.html#6.4">Servidores de actualizaciones automáticas</a></li>
+            <li><a href="./sistemasSeis.html#6.5">Partes de incidencias y protocolos de actuación</a></li>
+            <li><a href="./sistemasSeis.html#6.6">Administración remota</a></li>
           </ul>
       </section>
     </main>
