--- a/index.html
+++ b/index.html
@@ -57,6 +57,55 @@
           </div>
         </a>
         <!----------------------------------------->
+        <a href="#">
+          <div class="card inactiva">
+            <div><h3>Entornos de Desarrollo</h3></div>
+            <div><h5>x Semestre</h5></div>
+          </div>
+        </a>
+        <!----------------------------------------->
+        <a href="#">
+          <div class="card inactiva">
+            <div><h3>Desarrollo web en Entorno Cliente</h3></div>
+            <div><h5>x Semestre</h5></div>
+          </div>
+        </a>
+        <!----------------------------------------->
+        <a href="#">
+          <div class="card inactiva">
+            <div><h3>Desarrollo web en Entorno Servidor</h3></div>
+            <div><h5>x Semestre</h5></div>
+          </div>
+        </a>
+        <!----------------------------------------->
+        <a href="#">
+          <div class="card inactiva">
+            <div><h3>Despliegue de Aplicaciones Web</h3></div>
+            <div><h5>x Semestre</h5></div>
+          </div>
+        </a>
+        <!----------------------------------------->
+        <a href="#">
+          <div class="card inactiva">
+            <div><h3>Diseño de Interfaces Web</h3></div>
+            <div><h5>x Semestre</h5></div>
+          </div>
+        </a>
+        <!----------------------------------------->
+        <a href="#">
+          <div class="card inactiva">
+            <div><h3>Empresa e iniciativa Emprendedora</h3></div>
+            <div><h5>x Semestre</h5></div>
+          </div>
+        </a>
+        <!----------------------------------------->
+        <a href="#">
+          <div class="card inactiva">
+            <div><h3>Proyecto de Desarrollo de aplicaciones web</h3></div>
+            <div><h5>x Semestre</h5></div>
+          </div>
+        </a>
+        <!----------------------------------------->
       </section>
     </main>
   </body>
