--- a/daw/bdUno/bdUnoUno.html
+++ b/daw/bdUno/bdUnoUno.html
@@ -56,7 +56,7 @@
             </article>
         </main>-->
         <h1 class="tituloPrincipal">Bases de datos I</h1>
-        <h2 class="tituloTema">Tema 1. - Introducción a las bases de datos</h2>
+        <h2 class="tituloTema" id="unoUno">Tema 1. - Introducción a las bases de datos</h2>
         <p>Las bases de datos son una parte esencial e imprescindible en el ámbito de los sistemas informáticos.</p>
         <p class="nota">Una BBDD se puede definir como una agrupación de datos relacionados entre sí, almacenados en formato digital, con una organización o estructura determinada, de modo que se permite el acceso a dicha información con cierta rapidez.</p>
         <p>Las propiedades más importantes:</p>
@@ -66,7 +66,7 @@
             <li>Pueden llegar a almacenar grandes cantidades de información.</li>
             <li>Se habilita su uso para un grupo de usuarios concreto.</li>
         </ul>
-        <h3 class="subTitulo">Ventajas e inconvenientes de las BBDD</h3>
+        <h3 class="subTitulo" id="unoDos">Ventajas e inconvenientes de las BBDD</h3>
         <p><b>Ventajas</b></p>
         <ul>
             <li>La información contenida se procesa de forma independiente. Gracias a un buen diseño de relación entre los datos, conseguimos la menor redundancia posible.</li>
@@ -82,7 +82,7 @@
             <li>Requieren la adquisición y configuración de un hardware, lo cual resulta más costoso que otras alternativas como la información en papel. A corto plazo no ofrece rentabilidad.</li>
             <li>Necesita un espacio considerable en la memoria de la computadora, además del espacio requerido en el disco duro.</li>
         </ul>
-        <h3 class="subTitulo">Almacenamiento de la información</h3>
+        <h3 class="subTitulo" id="unoTres">Almacenamiento de la información</h3>
         <p>Las BBDD son hoy la técnica más eficiente para guardar información de todo tipo de una manera estructurada y accesible.</p>
         <p>Para almacenar información se utiliza un elemento clave llamado fichero. Los ficheros, también denominados archivos, son una secuencia de dígitos binarios que, siguiendo una estructura lógica determinada, almacenan una información concreta.</p>
         <h4 class="apartado">Tipos de ficheros</h4>
@@ -157,7 +157,7 @@
             <li><b>Orientadas a objetos:</b> la información se estructura en objetos, los cuales pertenecen a clases. Este tipo permite evitar la redundancia gracias a la reutilización de las clases.</li>
         </ul>
         <p>Por el criterio de la ubicación, podemos dividir las bases de datos en centralizadas y distribuidas.</p>
-        <h3 class="subTitulo">Sistemas gestores de bases de datos SGBD</h3>
+        <h3 class="subTitulo" id="unoCuatro">Sistemas gestores de bases de datos SGBD</h3>
         <p class="nota">Un sistema gestor de base de datos o SGBD es un programa o software que facilita a la persona encargada de la administración de las BBDD el tratamiento de la información que contiene. Puede realizar operaciones como diseño, consulta y modificación de dichos datos.</p>
         <h4 class="apartado">Funciones, componentes y tipos</h4>
         <p>Las funciones de los SGBD se pueden clasificar en tres tipos</p>
@@ -247,6 +247,8 @@
             </li>
             <li><b>In-Line:</b> no añade la definición de los datos hasta que no se ejecuta.</li>
         </ul>
-        <h3 class="subTitulo">ANSI/X3/SPARC. Estándares y niveles</h3>
+        <h3 class="subTitulo" id="unoCinco">ANSI/X3/SPARC. Estándares y niveles</h3>
+        <h3 class="subTitulo" id="unoSeis">Modelos de BBDD. Tipos: jerárquico, red, relacional y orientado a objetos</h3>
+        <h3 class="subTitulo" id="unoSiete">Bases de datos centralizadas y distribuidas</h3>
     </body>
 </html>
