--- a/daw/bdUno/bdUnoUno.html
+++ b/daw/bdUno/bdUnoUno.html
@@ -259,6 +259,6 @@
                 <a href="#unoUno"><div class="botonO">Arriba</div></a>
             </div>
         </div><!-- Fin contenedorApuntes -->
-        <footer><div>SapheryDesings - 2023</div></footer>
+        <footer class="pieApuntes"><div>SapheryDesings - 2023</div></footer>
     </body>
 </html>
