--- a/daw/bdUno/bdUnoUno.html
+++ b/daw/bdUno/bdUnoUno.html
@@ -14,16 +14,12 @@
   <title>Bases de Datos I</title>
 </head>
     <body>
-        <!--<header> Arreglar header 
+        <header>
             <div class="navtop">
                 <a href="../bdUno/indiceBdUno.html">Bases de Datos I</a>
                 <a href="../../index.html">Principal</a>
             </div>
-        </header> -->
-        <div class="navtop">
-            <a href="../bdUno/indiceBdUno.html">Bases de Datos I</a>
-            <a href="../../index.html">Principal</a>
-        </div>
+        </header>
         <div class="contenedorApuntes">
             <h2 class="tituloTema" id="unoUno">Tema 1. - Introducción a las bases de datos</h2>
             <p>Las bases de datos son una parte esencial e imprescindible en el ámbito de los sistemas informáticos.</p>
