--- a/index.html
+++ b/index.html
@@ -12,102 +12,99 @@
     <link rel="stylesheet" href="./css/mediaQ.css">
     <title>SapheryDesings - Portfolio</title>
   </head>
-  <body>
-    <main class="main--Principal">
+  <body class="main--Principal">
+    <section class="presentacion">
+      <span>SapheryDesings</span>
+    </section>
+    <!----------------------------------------->
+    <section><h3 class="tituloSeccion">Asignaturas DAW</h3></section>
+    <!----------------------------------------->
+    <section class="daw">
+      <a href="./daw/sistemas/indiceSistemas.html">
+        <div class="card">
+          <div><h3>Sistemas Informáticos</h3></div>
+          <div><h5>Primer Semestre</h5></div>
+        </div>
+      </a>
       <!----------------------------------------->
-      <section class="presentacion">
-        <span>SapheryDesings</span>
-      </section>
+      <a href="./daw/proUno/indiceProUno.html">
+        <div class="card">
+          <div><h3>Programación I</h3></div>
+          <div><h5>Primer Semestre</h5></div>
+        </div>
+      </a>
       <!----------------------------------------->
-      <section><h3 class="tituloSeccion">Asignaturas DAW</h3></section>
+      <a href="./daw/proDos/indiceProDos.html">
+        <div class="card segundoT">
+          <div><h3>Programación II</h3></div>
+          <div><h5>Segundo Semestre</h5></div>
+        </div>
+      </a>
       <!----------------------------------------->
-      <section class="daw">
-        <a href="./daw/sistemas/indiceSistemas.html">
-          <div class="card">
-            <div><h3>Sistemas Informáticos</h3></div>
-            <div><h5>Primer Semestre</h5></div>
-          </div>
-        </a>
-        <!----------------------------------------->
-        <a href="./daw/proUno/indiceProUno.html">
-          <div class="card">
-            <div><h3>Programación I</h3></div>
-            <div><h5>Primer Semestre</h5></div>
-          </div>
-        </a>
-        <!----------------------------------------->
-        <a href="./daw/proDos/indiceProDos.html">
-          <div class="card segundoT">
-            <div><h3>Programación II</h3></div>
-            <div><h5>Segundo Semestre</h5></div>
-          </div>
-        </a>
-        <!----------------------------------------->
-        <a href="./daw/bdUno/indiceBdUno.html">
-          <div class="card segundoT">
-            <div><h3>Bases de Datos I</h3></div>
-            <div><h5>Segundo Semestre</h5></div>
-          </div>
-        </a>
-        <!----------------------------------------->
-        <a href="./daw/Len_Marcas/indiceLen_Marcas.html">
-          <div class="card segundoT">
-            <div><h3>Lenguajes de Marcas</h3></div>
-            <div><h5>Segundo Semestre</h5></div>
-          </div>
-        </a>
-        <!----------------------------------------->
-        <a href="#">
-          <div class="card inactiva">
-            <div><h3>Entornos de Desarrollo</h3></div>
-            <div><h5>x Semestre</h5></div>
-          </div>
-        </a>
-        <!----------------------------------------->
-        <a href="#">
-          <div class="card inactiva">
-            <div><h3>Desarrollo web en Entorno Cliente</h3></div>
-            <div><h5>x Semestre</h5></div>
-          </div>
-        </a>
-        <!----------------------------------------->
-        <a href="#">
-          <div class="card inactiva">
-            <div><h3>Desarrollo web en Entorno Servidor</h3></div>
-            <div><h5>x Semestre</h5></div>
-          </div>
-        </a>
-        <!----------------------------------------->
-        <a href="#">
-          <div class="card inactiva">
-            <div><h3>Despliegue de Aplicaciones Web</h3></div>
-            <div><h5>x Semestre</h5></div>
-          </div>
-        </a>
-        <!----------------------------------------->
-        <a href="#">
-          <div class="card inactiva">
-            <div><h3>Diseño de Interfaces Web</h3></div>
-            <div><h5>x Semestre</h5></div>
-          </div>
-        </a>
-        <!----------------------------------------->
-        <a href="#">
-          <div class="card inactiva">
-            <div><h3>Empresa e iniciativa Emprendedora</h3></div>
-            <div><h5>x Semestre</h5></div>
-          </div>
-        </a>
-        <!----------------------------------------->
-        <a href="#">
-          <div class="card inactiva">
-            <div><h3>Proyecto de Desarrollo de aplicaciones web</h3></div>
-            <div><h5>x Semestre</h5></div>
-          </div>
-        </a>
-        <!----------------------------------------->
-      </section>
-    </main>
+      <a href="./daw/bdUno/indiceBdUno.html">
+        <div class="card segundoT">
+          <div><h3>Bases de Datos I</h3></div>
+          <div><h5>Segundo Semestre</h5></div>
+        </div>
+      </a>
+      <!----------------------------------------->
+      <a href="./daw/Len_Marcas/indiceLen_Marcas.html">
+        <div class="card segundoT">
+          <div><h3>Lenguajes de Marcas</h3></div>
+          <div><h5>Segundo Semestre</h5></div>
+        </div>
+      </a>
+      <!----------------------------------------->
+      <a href="#">
+        <div class="card inactiva">
+          <div><h3>Entornos de Desarrollo</h3></div>
+          <div><h5>x Semestre</h5></div>
+        </div>
+      </a>
+      <!----------------------------------------->
+      <a href="#">
+        <div class="card inactiva">
+          <div><h3>Desarrollo web en Entorno Cliente</h3></div>
+          <div><h5>x Semestre</h5></div>
+        </div>
+      </a>
+      <!----------------------------------------->
+      <a href="#">
+        <div class="card inactiva">
+          <div><h3>Desarrollo web en Entorno Servidor</h3></div>
+          <div><h5>x Semestre</h5></div>
+        </div>
+      </a>
+      <!----------------------------------------->
+      <a href="#">
+        <div class="card inactiva">
+          <div><h3>Despliegue de Aplicaciones Web</h3></div>
+          <div><h5>x Semestre</h5></div>
+        </div>
+      </a>
+      <!----------------------------------------->
+      <a href="#">
+        <div class="card inactiva">
+          <div><h3>Diseño de Interfaces Web</h3></div>
+          <div><h5>x Semestre</h5></div>
+        </div>
+      </a>
+      <!----------------------------------------->
+      <a href="#">
+        <div class="card inactiva">
+          <div><h3>Empresa e iniciativa Emprendedora</h3></div>
+          <div><h5>x Semestre</h5></div>
+        </div>
+      </a>
+      <!----------------------------------------->
+      <a href="#">
+        <div class="card inactiva">
+          <div><h3>Proyecto de Desarrollo de aplicaciones web</h3></div>
+          <div><h5>x Semestre</h5></div>
+        </div>
+      </a>
+      <!----------------------------------------->
+    </section>
   </body>
 </html>
 
